--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -1,7 +1,7 @@
 nav {
     width: 100% ;
     height: 70px;
-    color: $navcolor;
+    @include color ($teal);
     text-align: right;
     font-family: 'Quicksand', sans-serif;
     position: sticky; 
